# web-scraping-usingLLM

./: README.md  _outloiok.py  agentql-2.py  agentql_ex.py  async_compare_product_prices.py  eodd.html  firecrawl.html  firecrawl_2.py  firecrawl_3.py  firecrawl_4.py  firecrawl_5.py  firecrawl_6.py  firecrawl_ex.py  json_scraper_openai.py  pyproject.toml  scrapegraph_ex.py
agentql/close_cookies/: close_cookies.py
agentql/first_steps/: first_steps.py  product_page.py
firecrawl/o1_web_crawler /: o1_web_crawler.py
groq/: csv_scraper_graph_multi_groq.py
huggingfacehub/: json_scraper_huggingfacehub.py
